fix: consistent errors

--- a/src/www/account/connect/create-person.html
+++ b/src/www/account/connect/create-person.html
@@ -79,12 +79,12 @@
     </template>
     <template id="invalid-relationship_percent_ownership">
       <div class="error message" translate="yes">
-        Error! Invalid or missing percent ownership (0 if none)
+        Error! Missing or invalid percent ownership (0 if none)
       </div>
     </template>
     <template id="invalid-relationship_title">
       <div class="error message" translate="yes">
-        Error! Invalid or missing relationship title
+        Error! Missing or invalid relationship title
       </div>
     </template>
     <template id="unknown-error">
