--- a/src/www/account/connect/create-stripe-account.html
+++ b/src/www/account/connect/create-stripe-account.html
@@ -61,7 +61,7 @@
     </template>
     <template id="invalid-country">
       <div class="error message" translate="yes">
-        Error! Invalid or missing country
+        Error! Missing or invalid country
       </div>
     </template>
     <template id="invalid-csrf-token">
