--- a/src/www/account/connect/edit-payment-information.html
+++ b/src/www/account/connect/edit-payment-information.html
@@ -374,72 +374,72 @@
     </template>
     <template id="invalid-country">
       <div class="error message" translate="yes">
-        Error! Invalid or missing country of bank
+        Error! Missing or invalid country of bank
       </div>
     </template>
     <template id="invalid-currency">
       <div class="error message" translate="yes">
-        Error! Invalid or missing currency of account
+        Error! Missing or invalid currency of account
       </div>
     </template>
     <template id="invalid-account_holder_type">
       <div class="error message" translate="yes">
-        Error! Invalid or missing type of account
+        Error! Missing or invalid type of account
       </div>
     </template>
     <template id="invalid-account_number">
       <div class="error message" translate="yes">
-        Error! Invalid or missing account number
+        Error! Missing or invalid account number
       </div>
     </template>
     <template id="invalid-bsb_number">
       <div class="error message" translate="yes">
-        Error! Invalid or missing BSB number
+        Error! Missing or invalid BSB number
       </div>
     </template>
     <template id="invalid-bank_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Bank Code number
+        Error! Missing or invalid Bank Code number
       </div>
     </template>
     <template id="invalid-sort_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Sort code
+        Error! Missing or invalid Sort code
       </div>
     </template>
     <template id="invalid-institution_number">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Institution number
+        Error! Missing or invalid Institution number
       </div>
     </template>
     <template id="invalid-routing_number">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Transit number
+        Error! Missing or invalid Transit number
       </div>
     </template>
     <template id="invalid-clearing_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Clearing Code number
+        Error! Missing or invalid Clearing Code number
       </div>
     </template>
     <template id="invalid-branch_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Branch Code number
+        Error! Missing or invalid Branch Code number
       </div>
     </template>
     <template id="invalid-account_holder_name">
       <div class="error message" translate="yes">
-        Error! Invalid or missing account holder name
+        Error! Missing or invalid account holder name
       </div>
     </template>
     <template id="invalid-iban">
       <div class="error message" translate="yes">
-        Error! Invalid or missing IBAN number
+        Error! Missing or invalid IBAN number
       </div>
     </template>
     <template id="invalid-transit_number">
       <div class="error message" translate="yes">
-        Error! Invalid or missing transit number
+        Error! Missing or invalid transit number
       </div>
     </template>
 
