--- a/src/www/account/connect/edit-person.html
+++ b/src/www/account/connect/edit-person.html
@@ -296,172 +296,172 @@
     </template>
     <template id="invalid-id_number">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal ID number
+        Error! Missing or invalid personal ID number
       </div>
     </template>
     <template id="invalid-gender">
       <div class="error message" translate="yes">
-        Error! Invalid or missing gender
+        Error! Missing or invalid gender
       </div>
     </template>
     <template id="invalid-ssn_last_4">
       <div class="error message" translate="yes">
-        Error! Invalid or missing last 4 digits of Social Security Number
+        Error! Missing or invalid last 4 digits of Social Security Number
       </div>
     </template>
     <template id="invalid-dob_day">
       <div class="error message" translate="yes">
-        Error! Invalid or missing date of birth
+        Error! Missing or invalid date of birth
       </div>
     </template>
     <template id="invalid-dob_month">
       <div class="error message" translate="yes">
-        Error! Invalid or missing date of birth
+        Error! Missing or invalid date of birth
       </div>
     </template>
     <template id="invalid-dob_year">
       <div class="error message" translate="yes">
-        Error! Invalid or missing date of birth
+        Error! Missing or invalid date of birth
       </div>
     </template>
     <template id="invalid-first_name">
       <div class="error message" translate="yes">
-        Error! Invalid or missing first name
+        Error! Missing or invalid first name
       </div>
     </template>
     <template id="invalid-first_name_kana">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana first name
+        Error! Missing or invalid Kana first name
       </div>
     </template>
     <template id="invalid-first_name_kanji">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanjifirst name
+        Error! Missing or invalid Kanji first name
       </div>
     </template>
     <template id="invalid-last_name">
       <div class="error message" translate="yes">
-        Error! Invalid or missing last name
+        Error! Missing or invalid last name
       </div>
     </template>
     <template id="invalid-last_name_kana">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana last name
+        Error! Missing or invalid Kana last name
       </div>
     </template>
     <template id="invalid-last_name_kanji">
       <div class="error message" translate="yes">
-        Error! Invalid or missing last name
+        Error! Missing or invalid last name
       </div>
     </template>
     <template id="invalid-email">
       <div class="error message" translate="yes">
-        Error! Invalid or missing email
+        Error! Missing or invalid email
       </div>
     </template>
     <template id="invalid-phone">
       <div class="error message" translate="yes">
-        Error! Invalid or missing phone number
+        Error! Missing or invalid phone number
       </div>
     </template>
     <template id="invalid-relationship_percent_ownership">
       <div class="error message" translate="yes">
-        Error! Invalid or missing percent ownership
+        Error! Missing or invalid percent ownership
       </div>
     </template>
     <template id="invalid-verification_document_front">
       <div class="error message" translate="yes">
-        Error! Invalid or missing document front scan or photo
+        Error! Missing or invalid document front scan or photo
       </div>
     </template>
     <template id="invalid-verification_document_back">
       <div class="error message" translate="yes">
-        Error! Invalid or missing document back scan or photo
+        Error! Missing or invalid document back scan or photo
       </div>
     </template>
     <template id="invalid-verification_additional_document_front">
       <div class="error message" translate="yes">
-        Error! Invalid or missing additional document front scan or photo
+        Error! Missing or invalid additional document front scan or photo
       </div>
     </template>
     <template id="invalid-verification_additional_document_back">
       <div class="error message" translate="yes">
-        Error! Invalid or missing additional document back scan or photo
+        Error! Missing or invalid additional document back scan or photo
       </div>
     </template>
     <template id="invalid-address_country">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal address country
+        Error! Missing or invalid personal address country
       </div>
     </template>
     <template id="invalid-address_city">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal address city
+        Error! Missing or invalid personal address city
       </div>
     </template>
     <template id="invalid-address_state">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal address state
+        Error! Missing or invalid personal address state
       </div>
     </template>
     <template id="invalid-address_line1">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal address line 1
+        Error! Missing or invalid personal address line 1
       </div>
     </template>
     <template id="invalid-address_postal_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal postal code
+        Error! Missing or invalid personal postal code
       </div>
     </template>
     <template id="invalid-address_kana_city">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana personal address city
+        Error! Missing or invalid Kana personal address city
       </div>
     </template>
     <template id="invalid-address_kana_state">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana personal address state
+        Error! Missing or invalid Kana personal address state
       </div>
     </template>
     <template id="invalid-address_kana_town">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana personal address town
+        Error! Missing or invalid Kana personal address town
       </div>
     </template>
     <template id="invalid-address_kana_line1">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana personal address line 1
+        Error! Missing or invalid Kana personal address line 1
       </div>
     </template>
     <template id="invalid-address_kana_postal_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana personal address postal code
+        Error! Missing or invalid Kana personal address postal code
       </div>
     </template>
     <template id="invalid-address_kanji_city">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji personal address city
+        Error! Missing or invalid Kanji personal address city
       </div>
     </template>
     <template id="invalid-address_kanji_state">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji personal address state
+        Error! Missing or invalid Kanji personal address state
       </div>
     </template>
     <template id="invalid-address_kanji_town">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji personal address town
+        Error! Missing or invalid Kanji personal address town
       </div>
     </template>
     <template id="invalid-address_kanji_line1">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji personal address line 1
+        Error! Missing or invalid Kanji personal address line 1
       </div>
     </template>
     <template id="invalid-address_kanji_postal_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji personal address postal code
+        Error! Missing or invalid Kanji personal address postal code
       </div>
     </template>
     <template id="unknown-error">
