--- a/src/www/account/connect/edit-stripe-account.html
+++ b/src/www/account/connect/edit-stripe-account.html
@@ -451,287 +451,287 @@
     </template>
     <template id="invalid-business_profile_url">
       <div class="error message" translate="yes">
-        Error! Invalid or missing business URL
+        Error! Missing or invalid business URL
       </div>
     </template>
     <template id="invalid-business_profile_mcc">
       <div class="error message" translate="yes">
-        Error! Invalid or missing business Merchant Category Code
+        Error! Missing or invalid business Merchant Category Code
       </div>
     </template>
     <template id="invalid-business_profile_product_description">
       <div class="error message" translate="yes">
-        Error! Invalid or missing business product description
+        Error! Missing or invalid business product description
       </div>
     </template>
     <template id="invalid-individual_id_number">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal ID number
+        Error! Missing or invalid personal ID number
       </div>
     </template>
     <template id="invalid-individual_phone">
       <div class="error message" translate="yes">
-        Error! Invalid or missing telephone number
+        Error! Missing or invalid telephone number
       </div>
     </template>
     <template id="invalid-individual_gender">
       <div class="error message" translate="yes">
-        Error! Invalid or missing gender
+        Error! Missing or invalid gender
       </div>
     </template>
     <template id="invalid-individual_ssn_last_4">
       <div class="error message" translate="yes">
-        Error! Invalid or missing last 4 digits of Social Security Number
+        Error! Missing or invalid last 4 digits of Social Security Number
       </div>
     </template>
     <template id="invalid-individual_dob_day">
       <div class="error message" translate="yes">
-        Error! Invalid or missing date of birth
+        Error! Missing or invalid date of birth
       </div>
     </template>
     <template id="invalid-individual_dob_month">
       <div class="error message" translate="yes">
-        Error! Invalid or missing date of birth
+        Error! Missing or invalid date of birth
       </div>
     </template>
     <template id="invalid-individual_dob_year">
       <div class="error message" translate="yes">
-        Error! Invalid or missing date of birth
+        Error! Missing or invalid date of birth
       </div>
     </template>
     <template id="invalid-individual_first_name">
       <div class="error message" translate="yes">
-        Error! Invalid or missing first name
+        Error! Missing or invalid first name
       </div>
     </template>
     <template id="invalid-individual_first_name_kana">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana first name
+        Error! Missing or invalid Kana first name
       </div>
     </template>
     <template id="invalid-individual_first_name_kanji">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji first name
+        Error! Missing or invalid Kanji first name
       </div>
     </template>
     <template id="invalid-individual_last_name">
       <div class="error message" translate="yes">
-        Error! Invalid or missing last name
+        Error! Missing or invalid last name
       </div>
     </template>
     <template id="invalid-individual_last_name_kana">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana last name
+        Error! Missing or invalid Kana last name
       </div>
     </template>
     <template id="invalid-individual_last_name_kanji">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji last name
+        Error! Missing or invalid Kanji last name
       </div>
     </template>
     <template id="invalid-individual_email">
       <div class="error message" translate="yes">
-        Error! Invalid or missing email
+        Error! Missing or invalid email
       </div>
     </template>
     <template id="invalid-individual_address_city">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal address city
+        Error! Missing or invalid personal address city
       </div>
     </template>
     <template id="invalid-individual_address_state">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal address state
+        Error! Missing or invalid personal address state
       </div>
     </template>
     <template id="invalid-individual_address_line1">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal address line 1
+        Error! Missing or invalid personal address line 1
       </div>
     </template>
     <template id="invalid-individual_address_postal_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal postal code
+        Error! Missing or invalid personal postal code
       </div>
     </template>
     <template id="invalid-individual_address_kana_city">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana address city
+        Error! Missing or invalid Kana address city
       </div>
     </template>
     <template id="invalid-individual_address_kana_state">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana address state
+        Error! Missing or invalid Kana address state
       </div>
     </template>
     <template id="invalid-individual_address_kana_town">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana address town
+        Error! Missing or invalid Kana address town
       </div>
     </template>
     <template id="invalid-individual_address_kana_line1">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana address line 1
+        Error! Missing or invalid Kana address line 1
       </div>
     </template>
     <template id="invalid-individual_address_kana_postal_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana address postal code
+        Error! Missing or invalid Kana address postal code
       </div>
     </template>
     <template id="invalid-individual_address_kanji_city">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji address city
+        Error! Missing or invalid Kanji address city
       </div>
     </template>
     <template id="invalid-individual_address_kanji_state">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji address state
+        Error! Missing or invalid Kanji address state
       </div>
     </template>
     <template id="invalid-individual_address_kanji_town">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji address town
+        Error! Missing or invalid Kanji address town
       </div>
     </template>
     <template id="invalid-individual_address_kanji_line1">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji address line 1
+        Error! Missing or invalid Kanji address line 1
       </div>
     </template>
     <template id="invalid-individual_address_kanji_postal_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji address postal code
+        Error! Missing or invalid Kanji address postal code
       </div>
     </template>
     <template id="invalid-individual_verification_document_front">
       <div class="error message" translate="yes">
-        Error! Invalid or missing document front scan or photo
+        Error! Missing or invalid document front scan or photo
       </div>
     </template>
     <template id="invalid-individual_verification_document_back">
       <div class="error message" translate="yes">
-        Error! Invalid or missing document back scan or photo
+        Error! Missing or invalid document back scan or photo
       </div>
     </template>
     <template id="invalid-individual_verification_additional_document_front">
       <div class="error message" translate="yes">
-        Error! Invalid or missing additional document front scan or photo
+        Error! Missing or invalid additional document front scan or photo
       </div>
     </template>
     <template id="invalid-individual_verification_additional_document_back">
       <div class="error message" translate="yes">
-        Error! Invalid or missing additional document back scan or photo
+        Error! Missing or invalid additional document back scan or photo
       </div>
     </template>
     <template id="invalid-company_name">
       <div class="error message" translate="yes">
-        Error! Invalid or missing business name
+        Error! Missing or invalid business name
       </div>
     </template>
     <template id="invalid-company_name_kana">
       <div class="error message" translate="yes">
-        Error! Invalid or missing kana business name
+        Error! Missing or invalid kana business name
       </div>
     </template>
     <template id="invalid-company_name_kanji">
       <div class="error message" translate="yes">
-        Error! Invalid or missing kanji business name
+        Error! Missing or invalid kanji business name
       </div>
     </template>
     <template id="invalid-company_phone">
       <div class="error message" translate="yes">
-        Error! Invalid or missing telephone number
+        Error! Missing or invalid telephone number
       </div>
     </template>
     <template id="invalid-company_tax_id">
       <div class="error message" translate="yes">
-        Error! Invalid or missing business tax id
+        Error! Missing or invalid business tax id
       </div>
     </template>
     <template id="invalid-company_registration_number">
       <div class="error message" translate="yes">
-        Error! Invalid or missing company registration number
+        Error! Missing or invalid company registration number
       </div>
     </template>
     <template id="invalid-company_address_city">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal address city
+        Error! Missing or invalid personal address city
       </div>
     </template>
     <template id="invalid-company_address_state">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal address state
+        Error! Missing or invalid personal address state
       </div>
     </template>
     <template id="invalid-company_address_line1">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal address line 1
+        Error! Missing or invalid personal address line 1
       </div>
     </template>
     <template id="invalid-company_address_postal_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing personal postal code
+        Error! Missing or invalid personal postal code
       </div>
     </template>
     <template id="invalid-company_address_kana_city">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana address city
+        Error! Missing or invalid Kana address city
       </div>
     </template>
     <template id="invalid-company_address_kana_state">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana address state
+        Error! Missing or invalid Kana address state
       </div>
     </template>
     <template id="invalid-company_address_kana_town">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana address town
+        Error! Missing or invalid Kana address town
       </div>
     </template>
     <template id="invalid-company_address_kana_line1">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana address line 1
+        Error! Missing or invalid Kana address line 1
       </div>
     </template>
     <template id="invalid-company_address_kana_postal_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kana address postal code
+        Error! Missing or invalid Kana address postal code
       </div>
     </template>
     <template id="invalid-company_address_kanji_city">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji address city
+        Error! Missing or invalid Kanji address city
       </div>
     </template>
     <template id="invalid-company_address_kanji_state">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji address state
+        Error! Missing or invalid Kanji address state
       </div>
     </template>
     <template id="invalid-company_address_kanji_town">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji address town
+        Error! Missing or invalid Kanji address town
       </div>
     </template>
     <template id="invalid-company_address_kanji_line1">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji address line 1
+        Error! Missing or invalid Kanji address line 1
       </div>
     </template>
     <template id="invalid-company_address_kanji_postal_code">
       <div class="error message" translate="yes">
-        Error! Invalid or missing Kanji address postal code
+        Error! Missing or invalid Kanji address postal code
       </div>
     </template>
     <template id="invalid-company_verification_document_front">
       <div class="error message" translate="yes">
-        Error! Invalid or missing document front scan or photo
+        Error! Missing or invalid document front scan or photo
       </div>
     </template>
     <template id="invalid-company_verification_document_back">
       <div class="error message" translate="yes">
-        Error! Invalid or missing document back scan or photo
+        Error! Missing or invalid document back scan or photo
       </div>
     </template>
     <template id="unknown-error">
